module12/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpserver
spec:
  gateways:
    - httpserver
  hosts:
    - api.kevinzone.top
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: mod12.httpserver.svc.cluster.local
            port:
              number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - api.kevinzone.top
      port:
        name: http-server
        number: 443
        protocal: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kevin-tls
